# yumi

yumi_control/config/: controllers.yaml
yumi_hw/: CMakeLists.txt
yumi_hw/include/yumi_hw/: yumi_hw.h  yumi_hw_rapid.h
yumi_hw/rapid/ROS_control/: ROS_messages.sys  ROS_stateServer.mod
yumi_hw/src/: yumi_hw.cpp  yumi_hw_ifce_node.cpp
yumi_launch/launch/: yumi_pos_control.launch
